@@ -89,7 +89,8 @@ plugins = [
 		   'geanylatex/src/letters.c', 'geanylatex/src/bibtex.c',
 		   'geanylatex/src/bibtexlabels.c', 'geanylatex/src/reftex.c',
 		   'geanylatex/src/latexutils.c', 'geanylatex/src/formatutils.c',
-		   'geanylatex/src/formatpatterns.c'],
+		   'geanylatex/src/formatpatterns.c',
+		   'geanylatex/src/latexenvironments.c'],
 		 [ 'geanylatex' ], # include dirs
 		 '0.4dev'),
 	Plugin('geanylua',
